fdo#49854: Adjust array access for the addition of color scale attribute.

Or else crash would ensue...

Change-Id: I537523818eae3d558c300705baf7a5d9a8fa6dd9